<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/book_info"
            style="@style/style_editors_title_view"
            android:layout_marginTop="16dp"
            android:text="@string/edit_book_info"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_book_name"
            style="@style/style_editors_edit"
            android:hint="@string/edit_name"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/book_info" />


        <EditText
            android:id="@+id/edit_price"
            style="@style/style_editors_edit"
            android:layout_height="41dp"
            android:hint="Price *"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/edit_book_name" />


        <EditText
            android:id="@+id/editquantity"
            style="@style/style_editors_edit"
            android:hint="@string/edit_quantity"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/edit_price" />


        <TextView
            android:id="@+id/text_supplierinfo"
            style="@style/style_editors_title_view"
            android:layout_marginTop="20dp"
            android:text="@string/edit_supplier_info"
            app:layout_constraintTop_toBottomOf="@+id/editquantity"
            />

        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/style_editors_edit"
            android:hint="@string/edit_sup_name"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/text_supplierinfo" />


        <EditText
            android:id="@+id/edit_supplier_email"
            style="@style/style_editors_edit"
            android:hint="@string/edit_sup_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/edit_supplier_name" />


        <EditText
            android:id="@+id/edit_supplier_phone_number"
            style="@style/style_editors_edit"
            android:hint="@string/edit_sup_phone"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@+id/edit_supplier_email" />

        <TextView
            android:id="@+id/text_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:text="$"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="@id/edit_price"
            app:layout_constraintEnd_toEndOf="@+id/edit_price" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>