<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the list of products -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CatalogActivity">

    <GridView
        android:id="@+id/gridView"
        android:numColumns="1"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:paddingStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:contentDescription="@string/catalog_sign"
            android:id="@+id/emptySign"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_report_problem"/>

        <TextView
            android:id="@+id/emptyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emptySign"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/catalog_title"
            android:paddingTop="16dp"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/emptySubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emptyTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/catalog_subtitle"
            android:fontFamily="sans-serif"
            android:paddingTop="8dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#A2AAB0"/>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_action_book"
        android:tint="#ffffff" />
</RelativeLayout>